# color_divide_robot_s_n

./: CMakeLists.txt  README.md  create_armarker.py  mask_sheet_red.py  package.xml
crane_x7_examples/scripts/: pick_and_place_in_gazebo_example.py
data/: get_image.py  label_blue.py  label_green.py  label_orange.py  label_red.py  label_yellow.py  mask_cube_blue.py  mask_cube_yellow.py  mask_sheet_green.py  mask_sheet_orange.py  mask_sheet_red.py
docs/: README.md  README2.md
image/: mask_sheet_red
launch/: ar_table.launch  crane_x7_with_table.launch  try.launch
models/: wood_cubu_5cm_1
models/box_1/: model.config  model.sdf
models/box_2/: model.config  model.sdf
models/box_3/: model.config  model.sdf
models/cube_blue/: model.sdf
models/cube_green/: model.config  model.sdf
models/cube_green2/: model.config  model.sdf
models/cube_red/: model.sdf
models/cube_red2/: model.config  model.sdf
models/cube_yellow/: model.sdf
models/cubu_blue/: model.config  model.sdf
models/cubu_green/: model.config  model.sdf
models/cubu_red/: model.config  model.sdf
models/cubu_yellow/: model.config  model.sdf
models/marker000/: model.config  model.sdf
models/marker001/: model.config  model.sdf
models/marker002/: model.config  model.sdf
models/marker003/: model.config  model.sdf
models/marker004/: model.config  model.sdf
models/marker005/: model.config  model.sdf
models/marker006/: model.config  model.sdf
models/marker007/: model.config  model.sdf
models/marker008/: model.config  (+1 more)
scripts/: main.py  simu.py
worlds/: ar.world  table.world
(+32 files in other folders)
