<?xml version="1.0"?>
<package format="2">
  <name>color_divide_robot_S-N</name>
  <version>0.0.0</version>
  <description>The color_divide_robot_S-N package</description>

<!--team4 members-->
  <maintainer email="s22C1076jx@s.chibakoudai.jp">TakeruSoma</maintainer>
  <maintainer email=""></maintainer>

<!--下記以外のプログラムの著作者-->
  <author email=""></author>
  <author email=""></author>

  <license>NON-COMMERCIAL LICENCE AGREEMENT</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
